Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27272

Wrong construction of OpenGL context in platform plugin for windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.0.0 Beta 2
    • 5.0.0
    • Core: Plugins
    • None
    • Windows
    • 9c4b7d5eb203a84ade2c00398a52b3724631927c

    Description

      in Platforms/Windows/qwindowsglcontext.cpp on line 578 "attribIndex" is incremented, which is wrong.
      Fix: Remove "++"

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            divisionbyzero Basil Fierz
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes